# triumph-studio

./: .gitignore  BETA_README.txt  BUILD_CHECKPOINT.txt  CMakeLists.txt  KNOWN_ISSUES.md  README.md  RELEASE_NOTES.md
.github/workflows/: windows-release.yml
docs/: AIProducerBoundary.md  ARAResearch.md  Architecture.md  Beta1Acceptance.md  BetaReleaseChecklist.md  ClipFadesCrossfadesCheckpoint.md  ClipVariantsCheckpoint.md  CubaseTrackEventRedesign.md  DesignSystem.md  FoundationsRecoveryEvidence.md  FoundationsRecoveryRoadmap.md  Fr1Fr4ExitGateMatrixCheckpoint.md  HelpAssistantBoundary.md  NativePluginAutomationParityCheckpoint.md  PersistentUndoCheckpoint.md  Phase10Complete.md  Phase11Complete.md  Phase12Complete.md  Phase13Complete.md  Phase14Complete.md  Phase15Complete.md  Phase16Complete.md  Phase17Complete.md  Phase18AComplete.md  Phase3Release.md  Phase4Release.md  Phase5Release.md  Phase6Release.md  Phase7Release.md  Phase8Release.md  Phase8_1Release.md  Phase8_2Release.md  Phase8_3Release.md  Phase8_4Release.md  Phase9Complete.md  Phase9Release.md  Phase9_1Release.md  Phase9_2Release.md  PluginHostingRecoveryComplete.md  PluginIsolationBoundary.md  (+15 more)
src/: Main.cpp  MainComponent.cpp  MainComponent.h
src/audio/: AdvancedAudioRenderer.cpp  AdvancedAudioRenderer.h  AudioEngine.cpp  AudioEngine.h  AudioRecorder.cpp  AudioRecorder.h  AudioTrack.cpp  AudioTrack.h  MultiTrackRecorder.cpp  MultiTrackRecorder.h  OfflineRenderer.cpp  OfflineRenderer.h  PluginFreezeRenderer.cpp  PluginFreezeRenderer.h  RecordingJournal.cpp  RecordingJournal.h  StemExporter.cpp  StemExporter.h
src/core/: AdvancedAudioEdit.h  ArrangementLayout.h  AudioDeviceRecovery.h  AudioOutputHealth.h  AutomationWrite.h  BuiltInInstrument.h  FixedSampleClock.h  FoundationsExitGates.h  HelpAssistant.h  KeyboardShortcuts.h  MidiCapture.h  MidiPerformance.h  MixerGraph.h  MixerMath.h  MonitoringCapabilities.h  OfflineRenderMath.h  ParameterSmoother.h  PluginGraph.h  PluginHostPolicy.h  PluginRack.h  PluginRuntimeIsolation.h  ProducerAssistant.h  RealtimeDiagnosticsReport.h  RealtimeEngineState.h  RecordingPlan.h  RecordingStateMachine.h  RecordingTypes.h  ReleaseIdentity.h  ResponsiveLayout.h  SampleDelayLine.h  TempoAutomation.h  TempoMap.h  TimeStretch.h  TimelineMath.h  TransientDetector.h  WarpMap.h
src/model/: ProjectModel.cpp  ProjectModel.h
src/plugin/: PluginPresetStore.cpp  PluginPresetStore.h  PluginScanService.cpp  PluginScanService.h  PluginScannerMain.cpp
src/project/: ProjectDocument.cpp  ProjectDocument.h  ProjectWorkspace.cpp  ProjectWorkspace.h
src/ui/: AdvancedEditComponent.cpp  AdvancedEditComponent.h  ArrangementComponent.cpp  ArrangementComponent.h  HelpAssistantComponent.cpp  HelpAssistantComponent.h  MixerComponent.cpp  MixerComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  ProducerAssistantComponent.cpp  ProducerAssistantComponent.h  StudioIconButton.h  StudioLookAndFeel.cpp  StudioLookAndFeel.h  TempoAutomationComponent.cpp  TempoAutomationComponent.h  TrackRowComponent.cpp  TrackRowComponent.h
tests/: AdvancedAudioEditTests.cpp  ArrangementLayoutTests.cpp  AudioDeviceRecoveryTests.cpp  AudioEngineRealtimeTests.cpp  AudioOutputHealthTests.cpp  AutomationWriteTests.cpp  FixedSampleClockTests.cpp  FoundationsExitGatesTests.cpp  HelpAssistantTests.cpp  KeyboardShortcutsTests.cpp  MidiCaptureTests.cpp  MidiPerformanceTests.cpp  MixerGraphTests.cpp  MonitoringCapabilitiesTests.cpp  MultiTrackRecorderTests.cpp  ParameterSmootherTests.cpp  PluginGraphTests.cpp  PluginHostPolicyTests.cpp  PluginPresetStoreTests.cpp  PluginRuntimeIsolationTests.cpp  PluginScanServiceTests.cpp  PluginScannerFailureStub.cpp  ProducerAssistantTests.cpp  ProfessionalMixerGraphTests.cpp  ProjectModelTests.cpp  RealtimeCallbackAudit.cmake  RealtimeEngineStateTests.cpp  RecordingJournalTests.cpp  RecordingPlanTests.cpp  RecordingStateMachineTests.cpp  ReleaseIdentityTests.cpp  ResponsiveLayoutTests.cpp  SampleDelayLineTests.cpp  TempoAutomationTests.cpp  TempoMapTests.cpp  TestSupport.h  TimelineMathTests.cpp
tools/: LaunchTriumphStudio.ps1  PublishToGitHub.ps1
